--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,9 @@
 <h2 style="text-align:center;">To do list + LocalStorage</h2>
 
+<input type="text" />
+<button>Adicionar</button>
 <ul>
   <li *ngFor="let item of items">
-    {{ items }}
+    {{ item }}
   </li>
 </ul>
