--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,6 +8,6 @@
 <ul>
   <li *ngFor="let item of items">
     {{ item }}
-    <button (click)="remover()">Concluída</button>
+    <button (click)="remover(item)">Concluída</button>
   </li>
 </ul>
